# MeshIS

./: .gitignore  AbaqusExporter.cpp  AbaqusExporter.h  CMakeCache.txt  CMakeLists.txt  CommonMeshRepresentation.h  GZipCompression.vcxproj  GZipCompression.vcxproj.filters  GZipCompressor.cpp  GZipCompressor.hpp  IO_Exceptions.h  Main.cpp  MergeManager.cpp  MergeManager.h  MeshExporter.h  MeshImporter.h  ModFemExporter.cpp  ModFemExporter.h  README.md  Source.cpp  Su2MeshImporter.cpp  Su2MeshImporter.h  c.txt  cpp1.sln  cpp1.vcxproj  cpp1.vcxproj.filters  example1.su2  helperMethods.h  main.cpp  Źródło.cpp
ConsoleApplicationForConversion/: CMakeLists.txt  Converter.cpp  Converter.h  TestExporter.h  TestImporter.h  main.cpp
ConsoleApplicationForConversion/tests/: CMakeLists.txt  ConversionTest.cpp  ConversionTest.h  TestExporter.cpp  TestExporter.h  TestImporter.cpp  TestImporter.h
Decompression/: GZipCompressor.h  GZipcompressor.cpp  Source.cpp  dane2.txt
InvertSelection/: CMakeLists.txt  Inverter.cpp  Inverter.h  main.cpp
InvertSelection/Tests/: CMRDataPrinter.cpp  CMRDataPrinter.h  CMakeLists.txt  InversionTest.cpp  InversionTest.h
MeshRender/: OpenGLTest.sln
MeshRender/Debug/: OpenGLTest.ilk  glewinfo.txt
MeshRender/OpenGLTest/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  OpenGLTest  OpenGLTest.vcxproj  OpenGLTest.vcxproj.filters  Renderer.cpp  Renderer.h  Renderer.h~  TransformVertexShader.vertexshader  VertexLoader.cpp  VertexLoader.h  cmake_install.cmake  controls.cpp  controls.hpp  main.cpp  main.cpp~  shader.cpp  shader.hpp  texture.cpp  texture.hpp
MeshRender/OpenGLTest/Debug/: main.obj.enc  vc140.idb
MeshRender/OpenGLTest/Debug/OpenGLTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MeshRender/OpenGLTest/x64/Debug/: vc140.idb
MeshRender/OpenGLTest/x64/Debug/OpenGLTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MeshRender/OpenGLTest/x64/Release/OpenGLTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MeshRender/x64/Debug/: OpenGLTest.ilk  temp1.xyz
MeshRender/x64/Release/: OpenGLTest.iobj  OpenGLTest.ipdb  visualinfo.txt
Model/: MeshStatistic.h  nastran_transform.h  rotation.cpp  test.cpp
Model/Common/: CommonMeshRepresentation.h  ModFemMeshRepresentation.h
Model/GestureTest/: MauseGestures.cpp  MauseGestures.h  MauseGesturesTest.cpp
Model/IO/: CommonMeshRepresentation.h  FileManager.cpp  FileManager.h  IO_Exceptions.h  MeshImporter.h  NastranFileType.h  NastranLongMeshImporter.cpp  NastranLongMeshImporter.h  NastranParser.cpp  NastranParser.h  NastranSHORT.h
Model/IO/DirectElementSelect/: DirectElementSelect.cpp  DirectElementSelect.h
Model/IO/Export/: MeshExporter.h  Unv_Export.cpp  Unv_Export.h  main.cpp
Model/IO/Export/GMsh/: CMakeLists.txt  ExportGMsh.h  ExportGmsh.cpp  ExportMsh.sln  main.cpp
Model/IO/Export/GMsh/ExportMsh/: ExportMsh.vcxproj  Source.cpp
Model/IO/Export/GMsh/ExportMsh/Debug/: vc140.idb
Model/IO/Export/GMsh/ExportMsh/Debug/ExportMsh.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ExportMsh.lastbuildstate
Model/IO/Export/GMsh/cmake_build/: CMakeCache.txt
Model/IO/Export/Nastran/: BulkData.cpp  BulkData.h  FreeBulkData.cpp  FreeBulkData.h  LongBulkData.cpp  LongBulkData.h  NastranExporter.cpp  NastranExporter.h  ShortBulkData.cpp  ShortBulkData.h  freeNastran.bdf  main.cpp  mesh.txt  shortNastran.bdf  (+1 more)
Model/IO/Export/VTU_XML/: CMakeLists.txt  ParaviewVTKXMLexporter.cpp  ParaviewVTKXMLexporter.h  main.cpp
Model/IO/ExportNastran/: NastranExporter.cpp  NastranExporter.h
Model/IO/GeometricalSelection/: Node.cpp  Node.h  Selector.cpp  Selector.h  main.cpp
Model/IO/Import/: BdfParser.cpp  BdfParser.h  MeshImporter.h  ModFemMeshImporter.cpp  ModFemMeshImporter.h  NasParser.cpp  NasParser.h  NastranMeshImporter.cpp  NastranMeshImporter.h  NastranParser.h  ParaviewVTKLegacyMeshImporter.cpp  ParaviewVTKLegacyMeshImporter.h  SU2MeshImporter.cpp  SU2MeshImporter.h
Model/IO/Import/Abaqus/: Abaqus_Import.cpp  Abaqus_Import.h  Abaqus_Importer.cpp  Abaqus_Importer.h  CMakeLists.txt
Model/IO/State/: StateManager.cpp  StateManager.h
Model/IO/neighbour_select/: NeighbourSelections.cpp  NeighbourSelections.h
Model/Mesh Statistics/: MeshStatistics.cpp
Model/Mesh_Statistics/: MeshStatistics.cpp  MeshStatistics.h
Model/MultiSelection/: Multiselection.cpp  Multiselection.h
Model/Properties/Add/: PropertiesManager.cpp  PropertiesManager.h  TestAddProperties.cpp
Model/RemovingSelection/: RemovingSelection.cpp  RemovingSelection.h
PluginSystem/: Plugin2.cpp  Plugin_Exception.h  Plugin_Interfaces.h  Plugin_Manager.cpp  Plugin_Manager.h  Plugin_Register.h  main.cpp  plugin1.cpp
PredefinowaneWidoki/: CMakeLists.txt  PredefiniowaneWidoki.cpp
Project3/Project3/: Abaqus_Importer.h
TestData/CMR_objects/: CMR_TestObjects.h
TestData/MeshFiles/Abaqus/: test1_fluent.inp
TestData/MeshFiles/Ansys/: test1.msh
TestData/MeshFiles/GMsh/: example1.geo  example1.msh
TestData/MeshFiles/Su2/: example1.su2
TestData/MeshFiles/Universal UNV/: example1.unv
View/: AppStartPoint.cpp  AppStartPoint.h  StatisticsDisplayer.cpp  StatisticsDisplayer.h  ViewInitializer.cpp  ViewInitializer.h  main.cpp
markSelection/: CMakeLists.txt  example.txt  main.cpp  markselection.cpp  markselection.h  markselection.qrc  markselection.ui
recentlyOpenedFiles/: CMakeLists.txt  HelloQT.vcxproj  HelloQT.vcxproj.filters  helloqt.cpp  helloqt.h  helloqt.qrc  helloqt.ui  main.cpp  recentlyFiles.cpp  recentlyFiles.h
recentlyOpenedFiles/GeneratedFiles/: qrc_helloqt.cpp  ui_helloqt.h
recentlyOpenedFiles/GeneratedFiles/Debug/: moc_recentlyFiles.cpp
recentlyOpenedFiles/exampleTXT/: asciimail.txt  books.txt  instcat.txt  lawtext1.txt  lawtext2.txt  lawtext3.txt  lawtext4.txt  midiprim.txt  stereo.txt
(+71 files in other folders)
